[package]
name = "map_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
east_online_core = { version = "0.1.4" }
chrono = { version = "0.4.23" }
